--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
-    <title>Chain App Dev - App Landing Page HTML5 Template</title>
-
+    <title>Everest Náutica Escuela de Natación</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -31,6 +31,11 @@ https://templatemo.com/tm-570-chain-app-dev
     <link rel="stylesheet" href="assets/css/animated.css">
     <link rel="stylesheet" href="assets/css/owl.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rammetto+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
+   
   </head>
 
 <body>
@@ -56,17 +61,19 @@ https://templatemo.com/tm-570-chain-app-dev
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-              <img src="assets/images/logo.png" alt="Chain App Dev">
+              <img src="assets/images/logoeverest.PNG" alt="Chain App Dev">
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
-              <li class="scroll-to-section"><a href="#services">Services</a></li>
-              <li class="scroll-to-section"><a href="#about">About</a></li>
-              <li class="scroll-to-section"><a href="#pricing">Pricing</a></li>
-              <li class="scroll-to-section"><a href="#newsletter">Newsletter</a></li>
-              <li><div class="gradient-button"><a id="modal_trigger" href="#modal"><i class="fa fa-sign-in-alt"></i> Sign In Now</a></div></li> 
+              <li class="scroll-to-section"><a href="#top" class="active">Inicio</a></li>
+              <li class="scroll-to-section"><a href="#services">Sobre Nosotros</a></li>
+              <li class="scroll-to-section"><a href="#about">Clases</a></li>
+              <li class="scroll-to-section"><a href="#pricing">Ubicaciones</a></li>
+              <li class="scroll-to-section"><a href="#newsletter">Comunidad</a></li>
+              <li class="scroll-to-section"><a href="#newsletter">Contacto</a></li>      
+
+              <!-- <li><div class="gradient-button"><a id="modal_trigger" href="#modal"><i class="fa fa-sign-in-alt"></i> Sign In Now</a></div></li>  -->
             </ul>        
             <a class='menu-trigger'>
                 <span>Menu</span>
@@ -80,14 +87,14 @@ https://templatemo.com/tm-570-chain-app-dev
   <!-- ***** Header Area End ***** -->
   
   <div id="modal" class="popupContainer" style="display:none;">
-    <div class="popupHeader">
+   <!--  <div class="popupHeader">
         <span class="header_title">Login</span>
         <span class="modal_close"><i class="fa fa-times"></i></span>
-    </div>
+    </div> -->
 
     <section class="popupBody">
         <!-- Social Login -->
-        <div class="social_login">
+        <!-- <div class="social_login">
             <div class="">
                 <a href="#" class="social_box fb">
                     <span class="icon"><i class="fab fa-facebook"></i></span>
@@ -109,10 +116,10 @@ https://templatemo.com/tm-570-chain-app-dev
                 <div class="one_half"><a href="#" id="login_form" class="btn">Login</a></div>
                 <div class="one_half last"><a href="#" id="register_form" class="btn">Sign up</a></div>
             </div>
-        </div>
+        </div> -->
 
         <!-- Username & Password Login form -->
-        <div class="user_login">
+        <!-- <div class="user_login">
             <form>
                 <label>Email / Username</label>
                 <input type="text" />
@@ -134,10 +141,10 @@ https://templatemo.com/tm-570-chain-app-dev
             </form>
 
             <a href="#" class="forgot_password">Forgot password?</a>
-        </div>
+        </div> -->
 
         <!-- Register Form -->
-        <div class="user_register">
+        <!-- <div class="user_register">
             <form>
                 <label>Full Name</label>
                 <input type="text" />
@@ -161,7 +168,7 @@ https://templatemo.com/tm-570-chain-app-dev
                     <div class="one_half last"><a href="#" class="btn btn_red">Register</a></div>
                 </div>
             </form>
-        </div>
+        </div> -->
     </section>
 </div>
 
@@ -174,23 +181,21 @@ https://templatemo.com/tm-570-chain-app-dev
               <div class="left-content show-up header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <div class="row">
                   <div class="col-lg-12">
-                    <h2>Get The Latest App From App Stores</h2>
-                    <p>Chain App Dev is an app landing page HTML5 template based on Bootstrap v5.1.3 CSS layout provided by TemplateMo, a great website to download free CSS templates.</p>
+                    <h2 class="text-white fuentemain">EVEREST<br />  NÁUTICA </h2>
+                    <br />       
+                    <h3 class="text-white fuentemain">Escuela de Natación</h3>      
+                  </div>             
                   </div>
-                  <div class="col-lg-12">
-                    <div class="white-button first-button scroll-to-section">
-                      <a href="#contact">Free Quote <i class="fab fa-apple"></i></a>
-                    </div>
-                    <div class="white-button scroll-to-section">
-                      <a href="#contact">Free Quote <i class="fab fa-google-play"></i></a>
-                    </div>
-                  </div>
-                </div>
+                  <div class="row"> <div class="col-lg-4 align-self-center">
+                    <img src="assets/images/nina2.png" alt="">
+                    <br /><br /><br /><br />  
+                  </div> <h4 class="text-white cita">"Nadar es un Seguro de Vida"</h4></div>
+
               </div>
             </div>
             <div class="col-lg-6">
               <div class="right-image wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
-                <img src="assets/images/slider-dec.png" alt="">
+                <img src="assets/images/opcion5.PNG" alt="">
               </div>
             </div>
           </div>
